# reformers-dt-model-api-server

./: .openapi-generator-ignore  Dockerfile  GENERATOR.md  README.md  TODO.md  auth-config.json  pyproject.toml  repo-auth-config.json  setup.py  tox.ini
.github/workflows/: create-and-publish-container-image.yml
.openapi-generator/: FILES
openapi/: bundled.yaml
reformers_model_api_server/: __main__.py  encoder.py  start_app.py  util.py
reformers_model_api_server/controllers/: info_controller.py  model_generators_controller.py  models_controller.py  security_controller.py  status_controller.py  util.py
reformers_model_api_server/models/: __init__.py  application_problem_json.py  base_model.py  create_model.py  info_auth.py  info_create_model.py  info_create_model_additional_properties.py  info_create_model_value.py  info_generate_model.py  info_model.py  info_model_generator.py  info_model_generator_additional_properties.py  info_model_generator_value.py  list_models.py  model_format.py  model_generator_configuration_value.py  model_generator_parameters_inner.py  model_generator_parameters_value.py  model_generator_parameters_value_default.py  model_parameters_value.py  request_create_model.py
reformers_model_api_server/openapi/: openapi.yaml
reformers_model_api_server/test/: __init__.py  test_info_controller.py  test_model_generators_controller.py  test_models_controller.py  test_status_controller.py
